local_modules/diffhandler/src/parser-diffs-no-trace.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { ALL_LINES: peg$parseALL_LINES },
      peg$startRuleFunction  = peg$parseALL_LINES,

      peg$c0 = function(diff) { return diff },
      peg$c1 = "@@ ",
      peg$c2 = peg$literalExpectation("@@ ", false),
      peg$c3 = " @@",
      peg$c4 = peg$literalExpectation(" @@", false),
      peg$c5 = /^[^\n]/,
      peg$c6 = peg$classExpectation(["\n"], true, false),
      peg$c7 = function(change, section) { return change },
      peg$c8 = " ",
      peg$c9 = peg$literalExpectation(" ", false),
      peg$c10 = function(type, line) { return { type, line } },
      peg$c11 = function(linePre, cnt) { return cnt },
      peg$c12 = function(linePre, counterPre, linePost, cnt) { return cnt },
      peg$c13 = function(linePre, counterPre, linePost, counterPost) { return { linePre, counterPre, linePost, counterPost } },
      peg$c14 = function(command, meta, header, code) { return code },
      peg$c15 = function(command, meta, header, changes) { return { ...header, changes } },
      peg$c16 = function(command, meta, hunks) { return { command, meta, hunks } },
      peg$c17 = function(line) { return line },
      peg$c18 = function(meta) { return meta },
      peg$c19 = "Binary files",
      peg$c20 = peg$literalExpectation("Binary files", false),
      peg$c21 = "a",
      peg$c22 = peg$literalExpectation("a", false),
      peg$c23 = " and ",
      peg$c24 = peg$literalExpectation(" and ", false),
      peg$c25 = peg$anyExpectation(),
      peg$c26 = "b",
      peg$c27 = peg$literalExpectation("b", false),
      peg$c28 = " differ",
      peg$c29 = peg$literalExpectation(" differ", false),
      peg$c30 = function(fileA, fileB) { return { type: "BinaryFilesDiffer", fileA, fileB } },
      peg$c31 = function() { return { type: "FileDeleted" } },
      peg$c32 = function(mode) { return { type: "FileNew" } },
      peg$c33 = function() { return { type: "FileModeChange" } },
      peg$c34 = function(direction, filename) { return { type: "FileRename", direction, filename } },
      peg$c35 = function() { return { type: "SimilarityIndex" } },
      peg$c36 = function() { return { type: "NoNewline" } },
      peg$c37 = function(from, to) { return { type: "FileRename", from, to } },
      peg$c38 = function(from, to) { return { type: "Index", from, to } },
      peg$c39 = function(fileA, fileB) { return { type: "Overview", fileA, fileB } },
      peg$c40 = function(direction, file) { return { direction, file } },
      peg$c41 = " b/",
      peg$c42 = peg$literalExpectation(" b/", false),
      peg$c43 = function(fileA, fileB) { return { fileA, fileB } },
      peg$c44 = /^[ \t]/,
      peg$c45 = peg$classExpectation([" ", "\t"], false, false),
      peg$c46 = /^[ \t\n\r]/,
      peg$c47 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c48 = "-",
      peg$c49 = peg$literalExpectation("-", false),
      peg$c50 = "+",
      peg$c51 = peg$literalExpectation("+", false),
      peg$c52 = "---",
      peg$c53 = peg$literalExpectation("---", false),
      peg$c54 = "+++",
      peg$c55 = peg$literalExpectation("+++", false),
      peg$c56 = "file",
      peg$c57 = peg$literalExpectation("file", false),
      peg$c58 = "s",
      peg$c59 = peg$literalExpectation("s", false),
      peg$c60 = " changed",
      peg$c61 = peg$literalExpectation(" changed", false),
      peg$c62 = "insertion",
      peg$c63 = peg$literalExpectation("insertion", false),
      peg$c64 = "(+)",
      peg$c65 = peg$literalExpectation("(+)", false),
      peg$c66 = "deletion",
      peg$c67 = peg$literalExpectation("deletion", false),
      peg$c68 = "(-)",
      peg$c69 = peg$literalExpectation("(-)", false),
      peg$c70 = "file mode",
      peg$c71 = peg$literalExpectation("file mode", false),
      peg$c72 = "/dev/null",
      peg$c73 = peg$literalExpectation("/dev/null", false),
      peg$c74 = "diff --git",
      peg$c75 = peg$literalExpectation("diff --git", false),
      peg$c76 = "index",
      peg$c77 = peg$literalExpectation("index", false),
      peg$c78 = "..",
      peg$c79 = peg$literalExpectation("..", false),
      peg$c80 = "similarity index",
      peg$c81 = peg$literalExpectation("similarity index", false),
      peg$c82 = "deleted",
      peg$c83 = peg$literalExpectation("deleted", false),
      peg$c84 = "new",
      peg$c85 = peg$literalExpectation("new", false),
      peg$c86 = "rename",
      peg$c87 = peg$literalExpectation("rename", false),
      peg$c88 = "from",
      peg$c89 = peg$literalExpectation("from", false),
      peg$c90 = "to",
      peg$c91 = peg$literalExpectation("to", false),
      peg$c92 = "a/",
      peg$c93 = peg$literalExpectation("a/", false),
      peg$c94 = "b/",
      peg$c95 = peg$literalExpectation("b/", false),
      peg$c96 = "\\ No newline at end of file",
      peg$c97 = peg$literalExpectation("\\ No newline at end of file", false),
      peg$c98 = "GIT binary patch",
      peg$c99 = peg$literalExpectation("GIT binary patch", false),
      peg$c100 = "literal",
      peg$c101 = peg$literalExpectation("literal", false),
      peg$c102 = "delta",
      peg$c103 = peg$literalExpectation("delta", false),
      peg$c104 = "old mode",
      peg$c105 = peg$literalExpectation("old mode", false),
      peg$c106 = "new mode",
      peg$c107 = peg$literalExpectation("new mode", false),
      peg$c108 = "[",
      peg$c109 = peg$literalExpectation("[", false),
      peg$c110 = "]",
      peg$c111 = peg$literalExpectation("]", false),
      peg$c112 = "/",
      peg$c113 = peg$literalExpectation("/", false),
      peg$c114 = ":",
      peg$c115 = peg$literalExpectation(":", false),
      peg$c116 = ",",
      peg$c117 = peg$literalExpectation(",", false),
      peg$c118 = "\n",
      peg$c119 = peg$literalExpectation("\n", false),
      peg$c120 = "\n\n",
      peg$c121 = peg$literalExpectation("\n\n", false),
      peg$c122 = /^[0-9]/,
      peg$c123 = peg$classExpectation([["0", "9"]], false, false),
      peg$c124 = /^[a-fA-F0-9]/,
      peg$c125 = peg$classExpectation([["a", "f"], ["A", "F"], ["0", "9"]], false, false),
      peg$c126 = "%",
      peg$c127 = peg$literalExpectation("%", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseALL_LINES() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseGIT_DIFF();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseGIT_DIFF();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseTEMP_HUNK_LINES() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseTEMP_CHANGE();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 3) === peg$c3) {
          s3 = peg$c3;
          peg$currPos += 3;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          if (peg$c5.test(input.charAt(peg$currPos))) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            if (peg$c5.test(input.charAt(peg$currPos))) {
              s5 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7(s2, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTEMP_CODE() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 32) {
      s1 = peg$c8;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parseLBLPlus();
      if (s1 === peg$FAILED) {
        s1 = peg$parseLBLMinus();
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      if (peg$c5.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        if (peg$c5.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEMPTY_LINE() {
    var s0;

    s0 = peg$parseLINEBREAK();
    if (s0 === peg$FAILED) {
      s0 = peg$parseLBLNoNewline();
    }

    return s0;
  }

  function peg$parseTEMP_CHANGE() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parseMINUS();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      s4 = peg$parseRxCounter();
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseRxCounter();
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$currPos;
          s6 = [];
          s7 = peg$parseRxCounter();
          if (s7 !== peg$FAILED) {
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parseRxCounter();
            }
          } else {
            s6 = peg$FAILED;
          }
          if (s6 !== peg$FAILED) {
            s5 = input.substring(s5, peg$currPos);
          } else {
            s5 = s6;
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c11(s2, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWS();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsePLUS();
            if (s5 !== peg$FAILED) {
              s6 = peg$currPos;
              s7 = [];
              s8 = peg$parseRxCounter();
              if (s8 !== peg$FAILED) {
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parseRxCounter();
                }
              } else {
                s7 = peg$FAILED;
              }
              if (s7 !== peg$FAILED) {
                s6 = input.substring(s6, peg$currPos);
              } else {
                s6 = s7;
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$currPos;
                s8 = peg$parseCOMMA();
                if (s8 !== peg$FAILED) {
                  s9 = peg$currPos;
                  s10 = [];
                  s11 = peg$parseRxCounter();
                  if (s11 !== peg$FAILED) {
                    while (s11 !== peg$FAILED) {
                      s10.push(s11);
                      s11 = peg$parseRxCounter();
                    }
                  } else {
                    s10 = peg$FAILED;
                  }
                  if (s10 !== peg$FAILED) {
                    s9 = input.substring(s9, peg$currPos);
                  } else {
                    s9 = s10;
                  }
                  if (s9 !== peg$FAILED) {
                    peg$savedPos = s7;
                    s8 = peg$c12(s2, s3, s6, s9);
                    s7 = s8;
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c13(s2, s3, s6, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGIT_DIFF() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;

    s0 = peg$currPos;
    s1 = peg$parseLineDiffGit();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWSLB();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseMetaData();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$currPos;
          s6 = peg$parseTEMP_HUNK_LINES();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseWSLB();
            if (s7 !== peg$FAILED) {
              s8 = [];
              s9 = peg$currPos;
              s10 = peg$parseTEMP_CODE();
              if (s10 !== peg$FAILED) {
                s11 = peg$parseWSLB();
                if (s11 !== peg$FAILED) {
                  s12 = peg$currPos;
                  s13 = peg$parseEMPTY_LINE();
                  if (s13 !== peg$FAILED) {
                    s14 = peg$parseWSLB();
                    if (s14 !== peg$FAILED) {
                      s13 = [s13, s14];
                      s12 = s13;
                    } else {
                      peg$currPos = s12;
                      s12 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s12;
                    s12 = peg$FAILED;
                  }
                  if (s12 === peg$FAILED) {
                    s12 = null;
                  }
                  if (s12 !== peg$FAILED) {
                    peg$savedPos = s9;
                    s10 = peg$c14(s1, s3, s6, s10);
                    s9 = s10;
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s9;
                  s9 = peg$FAILED;
                }
              } else {
                peg$currPos = s9;
                s9 = peg$FAILED;
              }
              while (s9 !== peg$FAILED) {
                s8.push(s9);
                s9 = peg$currPos;
                s10 = peg$parseTEMP_CODE();
                if (s10 !== peg$FAILED) {
                  s11 = peg$parseWSLB();
                  if (s11 !== peg$FAILED) {
                    s12 = peg$currPos;
                    s13 = peg$parseEMPTY_LINE();
                    if (s13 !== peg$FAILED) {
                      s14 = peg$parseWSLB();
                      if (s14 !== peg$FAILED) {
                        s13 = [s13, s14];
                        s12 = s13;
                      } else {
                        peg$currPos = s12;
                        s12 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s12;
                      s12 = peg$FAILED;
                    }
                    if (s12 === peg$FAILED) {
                      s12 = null;
                    }
                    if (s12 !== peg$FAILED) {
                      peg$savedPos = s9;
                      s10 = peg$c14(s1, s3, s6, s10);
                      s9 = s10;
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s9;
                  s9 = peg$FAILED;
                }
              }
              if (s8 !== peg$FAILED) {
                peg$savedPos = s5;
                s6 = peg$c15(s1, s3, s6, s8);
                s5 = s6;
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$currPos;
            s6 = peg$parseTEMP_HUNK_LINES();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseWSLB();
              if (s7 !== peg$FAILED) {
                s8 = [];
                s9 = peg$currPos;
                s10 = peg$parseTEMP_CODE();
                if (s10 !== peg$FAILED) {
                  s11 = peg$parseWSLB();
                  if (s11 !== peg$FAILED) {
                    s12 = peg$currPos;
                    s13 = peg$parseEMPTY_LINE();
                    if (s13 !== peg$FAILED) {
                      s14 = peg$parseWSLB();
                      if (s14 !== peg$FAILED) {
                        s13 = [s13, s14];
                        s12 = s13;
                      } else {
                        peg$currPos = s12;
                        s12 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s12;
                      s12 = peg$FAILED;
                    }
                    if (s12 === peg$FAILED) {
                      s12 = null;
                    }
                    if (s12 !== peg$FAILED) {
                      peg$savedPos = s9;
                      s10 = peg$c14(s1, s3, s6, s10);
                      s9 = s10;
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s9;
                  s9 = peg$FAILED;
                }
                while (s9 !== peg$FAILED) {
                  s8.push(s9);
                  s9 = peg$currPos;
                  s10 = peg$parseTEMP_CODE();
                  if (s10 !== peg$FAILED) {
                    s11 = peg$parseWSLB();
                    if (s11 !== peg$FAILED) {
                      s12 = peg$currPos;
                      s13 = peg$parseEMPTY_LINE();
                      if (s13 !== peg$FAILED) {
                        s14 = peg$parseWSLB();
                        if (s14 !== peg$FAILED) {
                          s13 = [s13, s14];
                          s12 = s13;
                        } else {
                          peg$currPos = s12;
                          s12 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s12;
                        s12 = peg$FAILED;
                      }
                      if (s12 === peg$FAILED) {
                        s12 = null;
                      }
                      if (s12 !== peg$FAILED) {
                        peg$savedPos = s9;
                        s10 = peg$c14(s1, s3, s6, s10);
                        s9 = s10;
                      } else {
                        peg$currPos = s9;
                        s9 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s9;
                    s9 = peg$FAILED;
                  }
                }
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s5;
                  s6 = peg$c15(s1, s3, s6, s8);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c16(s1, s3, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMetaData() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseValidMetaLines();
    if (s3 !== peg$FAILED) {
      s4 = peg$parseWSLB();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s2;
        s3 = peg$c17(s3);
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parseValidMetaLines();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseWSLB();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c17(s3);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c18(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseValidMetaLines() {
    var s0;
